Bug 786531: DER_EncodeTimeChoice should NOT use a UTCTime for an input before 1950 or exactly equal to January1st2050. The patch is contributed by Matt Mueller <mattm@chromium.org>. r=wtc.